feat: invalid rename location should report an error message.
Signed-off-by: azerr <azerr@redhat.com>